# aoc

./: .gitignore
.helix/: languages.toml
2025/: Cargo.toml  download.sh  justfile  session-cookie
2025/c_deps/: grid.h
2025/docs/: roc-llms-std-lib.txt
2025/resources/templates/c/: main.c
2025/resources/templates/roc/: main.roc
2025/src/: main.rs
2025/src/01/: main.roc
2025/src/02/: main.roc
2025/src/03/: main.roc
2025/src/04/: main.c
2025/src/05/: main.c
2025/src/06/: main.rs
2025/src/07/: main.rs
2025/src/08/: main.rs
2025/src/09/: main.c
