[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"
default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "aoc06"
path = "src/06/main.rs"

[[bin]]
name = "aoc07"
path = "src/07/main.rs"

[[bin]]
name = "aoc08"
path = "src/08/main.rs"

[dependencies]
const_format = "0.2.35"
glam = "0.30.9"
itertools = "0.14.0"
